# labs_os

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  input.txt  main.c  main.cpp
.github/workflows/: ci.yaml
CP/: CMakeLists.txt
CP/include/: shared_memory.h
CP/src/: client.cpp  server.cpp
LW1/: CMakeLists.txt  main.c
LW1/doc/: 1.docx
LW1/include/: utils.h
LW1/src/: child1.c  child2.c  parent.c  utils.c
LW2/: CMakeLists.txt  main.c
LW2/include/: utils.h
LW2/src/: utils.c
LW3/: CMakeLists.txt  main.c
LW3/include/: utils.h
LW3/src/: child1.c  child2.c  parent.c
LW4/: CMakeLists.txt  dynamic.c  static.c
LW4/e_calc/: CMakeLists.txt  e_calc.c  e_calc.h
LW4/include/: first_headers.h  second_headers.h
LW4/prime_count/: CMakeLists.txt  prime_count.c  prime_count.h
LW4/src/: first_lib.c  second_lib.c
LW4/test_dynamic/: CMakeLists.txt  test_dynamic.c
LW4/test_static/: CMakeLists.txt  test_static.c
LW5-7/include/: controller.h  tools.h
LW5-7/src/: controller.cpp  tools.cpp  worker.cpp
LW8/: 8.docx
include/: child.h  parent.h  process_functions.h  utils.h
src/: child.c  child.cpp  main_child.c  main_parent.c  parent.c  parent.cpp  process_functions.c  utils.c
test/: test.cpp  tests.cpp
tests/: CMakeLists.txt  lab1_test.cpp  lab2_test.cpp  lab3_test.cpp  lab4_test.cpp  lab5-7_test.cpp
